feat: details transaction
